Added thanks text for the form and changed font fm

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -584,6 +584,7 @@ section {
     width: 100%;
     padding: 1rem;
     margin-bottom: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .form textarea {
